--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,23 +1,17 @@
 steps:
-# Step 1: Run 'dotnet restore' to restore NuGet dependencies
 - name: 'gcr.io/cloud-builders/dotnet'
-  entrypoint: 'bash'
   args:
-  - '-c'
-  - 'dotnet restore'
+  - 'restore'
+  - '-r'
+  - 'linux-x64'  # Specify a runtime identifier suitable for the build environment
 
-# Step 2: Build your C# application
 - name: 'gcr.io/cloud-builders/dotnet'
   args:
   - 'build'
   - '-c'
   - 'Release'
-  - '--no-restore'  # Skip restore since it was done in the previous step
+  - '--no-restore'
+  - '-r'
+  - 'linux-x64'
 
 # Add more steps as needed...
-
-# Final step: Deploy your application (example)
-- name: 'gcr.io/cloud-builders/gcloud'
-  args: ['app', 'deploy']
-
-# You can include additional steps for deployment or testing as needed
