--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,9 +2,8 @@ steps:
 - name: 'gcr.io/cloud-builders/dotnet'
   args:
   - 'restore'
-  - '-r'
-  - 'linux-x64'
-  - 'wodapi/wodapi.csproj'  # Replace with the actual path to your .csproj file
+  - '--runtime'
+  - 'linux-x64'  # Specify a runtime identifier suitable for the build environment
 
 - name: 'gcr.io/cloud-builders/dotnet'
   args:
@@ -12,8 +11,7 @@ steps:
   - '-c'
   - 'Release'
   - '--no-restore'
-  - '-r'
+  - '--runtime'
   - 'linux-x64'
-  - 'wodapi/wodapi.csproj'  # Replace with the actual path to your .csproj file
 
 # Add more steps as needed...
