--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,31 +2,14 @@ steps:
 - name: 'gcr.io/cloud-builders/git'
   args: ['clone', 'https://github.com/PhilipBessong/wodboxrepo', '.']
 
-- name: 'gcr.io/cloud-builders/dotnet'
+- name: 'mcr.microsoft.com/dotnet/sdk:6.0'
   entrypoint: 'bash'
   args:
   - '-c'
-  - |
-    DOTNET_VERSION="6.0.100"
-    DOTNET_SDK_URL="https://download.visualstudio.microsoft.com/download/pr/2c8d5080-94bc-40d8-9f15-0a0594f05a4f/d80ae017be1c1218bf0c1cf96a005035/dotnet-sdk-${DOTNET_VERSION}-linux-x64.tar.gz"
-    
-    wget -O dotnet.tar.gz ${DOTNET_SDK_URL}
-    mkdir -p /usr/share/dotnet
-    tar -C /usr/share/dotnet -xzf dotnet.tar.gz
-    rm dotnet.tar.gz
-    export PATH=$PATH:/usr/share/dotnet
+  - 'dotnet restore --runtime linux-x64'
 
-- name: 'gcr.io/cloud-builders/dotnet'
+- name: 'mcr.microsoft.com/dotnet/sdk:6.0'
+  entrypoint: 'bash'
   args:
-  - 'restore'
-  - '--runtime'
-  - 'linux-x64'
-
-- name: 'gcr.io/cloud-builders/dotnet'
-  args:
-  - 'build'
   - '-c'
-  - 'Release'
-  - '--no-restore'
-  - '--runtime'
-  - 'linux-x64'
+  - 'dotnet build -c Release --no-restore --runtime linux-x64'
