--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,10 +6,14 @@ steps:
   entrypoint: 'bash'
   args:
   - '-c'
-  - 'dotnet restore --runtime linux-x64 --source https://api.nuget.org/v3/index.json'
+  - 'dotnet restore'
+  - '-r'
+  - 'linux-x64'
+  - '--source'
+  - 'https://api.nuget.org/v3/index.json'
 
 - name: 'mcr.microsoft.com/dotnet/sdk:6.0'
   entrypoint: 'bash'
   args:
   - '-c'
-  - 'dotnet build -c Release --no-restore --runtime linux-x64'
+  - 'dotnet build -c Release -r linux-x64'
