--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,15 +2,11 @@ steps:
 - name: 'gcr.io/cloud-builders/git'
   args: ['clone', 'https://github.com/PhilipBessong/wodboxrepo', '.']
 
-- name: 'mcr.microsoft.com/dotnet/sdk:6.0'
+- name: 'mcr.microsoft.com/dotnet/sdk:latest'
   entrypoint: 'bash'
   args:
   - '-c'
-  - 'dotnet restore'
-  - '-r'
-  - 'linux-x64'
-  - '--source'
-  - 'https://api.nuget.org/v3/index.json'
+  - 'dotnet restore -r linux-x64 --source https://api.nuget.org/v3/index.json'
 
 - name: 'mcr.microsoft.com/dotnet/sdk:6.0'
   entrypoint: 'bash'
