--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,6 @@
 steps:
-- name: 'gcr.io/cloud-builders/git'
-  args: ['rm', '-rf', '.']
-
-- name: 'gcr.io/cloud-builders/git'
-  args: ['clone', '--depth=1', 'https://github.com/PhilipBessong/wodboxrepo', '.']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['source', 'repos', 'clone', 'wodboxrepo', '/workspace']
 
 - name: 'mcr.microsoft.com/dotnet/sdk:6.0'
   entrypoint: 'bash'
