--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,9 @@
 steps:
 - name: 'gcr.io/cloud-builders/git'
-  args: ['clone', 'https://github.com/PhilipBessong/wodboxrepo', '/workspace']
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - 'rm -rf /workspace/* && git clone https://github.com/PhilipBessong/wodboxrepo /workspace'
 
 - name: 'mcr.microsoft.com/dotnet/sdk:6.0'
   entrypoint: 'bash'
