--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,16 @@
 steps:
 - name: 'gcr.io/cloud-builders/git'
-  args: ['clone', '--branch', '5e6846c0e4d3bdb65c7c30c8eac61e422bcc4400', 'https://github.com/PhilipBessong/wodboxrepo', 'source']
+  args:
+  - 'clone'
+  - '--branch'
+  - '5e6846c0e4d3bdb65c7c30c8eac61e422bcc4400'
+  - 'https://github.com/PhilipBessong/wodboxrepo'
+  - '.'
+  - '--'
+  - '/bin/rm'
+  - '-rf'
+  - './*'
+
 
 - name: 'mcr.microsoft.com/dotnet/sdk:6.0'
   entrypoint: 'bash'
