--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,9 +3,13 @@ steps:
   entrypoint: '/bin/bash'
   args:
   - '-c'
-  - |
-    rm -rf ./*
-    git clone --branch 5e6846c0e4d3bdb65c7c30c8eac61e422bcc4400 https://github.com/PhilipBessong/wodboxrepo .
+  - 'rm -rf /workspace/*'
+
+- name: 'gcr.io/cloud-builders/git'
+  entrypoint: '/bin/bash'
+  args:
+  - '-c'
+  - 'git clone --branch 5e6846c0e4d3bdb65c7c30c8eac61e422bcc4400 https://github.com/PhilipBessong/wodboxrepo /workspace'
 
 
 - name: 'mcr.microsoft.com/dotnet/sdk:6.0'
