--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,15 +11,14 @@ steps:
   - '-c'
   - 'git clone --branch 5e6846c0e4d3bdb65c7c30c8eac61e422bcc4400 https://github.com/PhilipBessong/wodboxrepo /workspace'
 
+- name: 'mcr.microsoft.com/dotnet/sdk:6.0'
+  entrypoint: 'bash'
+  args:
+  - '-c'
+  - 'cd wodapi && dotnet restore --runtime linux-x64 --source https://api.nuget.org/v3/index.json'
 
 - name: 'mcr.microsoft.com/dotnet/sdk:6.0'
   entrypoint: 'bash'
   args:
   - '-c'
-  - 'cd source && dotnet restore --runtime linux-x64 --source https://api.nuget.org/v3/index.json'
-
-- name: 'mcr.microsoft.com/dotnet/sdk:6.0'
-  entrypoint: 'bash'
-  args:
-  - '-c'
-  - 'cd source && dotnet build -c Release --no-restore --runtime linux-x64'
+  - 'cd wodapi && dotnet build -c Release --no-restore --runtime linux-x64'
