--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
   entrypoint: '/bin/bash'
   args:
   - '-c'
-  - 'rm -rf /wodapi/*'
+  - 'find /workspace/ -mindepth 1 -maxdepth 1 ! -name ".git" -exec rm -rf {} +'
 
 
 - name: 'gcr.io/cloud-builders/git'
