--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,8 @@ steps:
   entrypoint: '/bin/bash'
   args:
   - '-c'
-  - 'git clone --branch main https://github.com/PhilipBessong/wodboxrepo /workspace'
+  - 'git clone --branch main https://github.com/PhilipBessong/wodboxrepo /workspace/wodboxrepo'
+
 
 - name: 'mcr.microsoft.com/dotnet/sdk:6.0'
   entrypoint: 'bash'
