--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,10 +4,9 @@ steps:
   args:
   - '-c'
   - 'git clone --branch main https://github.com/PhilipBessong/wodboxrepo /workspace/wodboxrepo'
-
  - name: 'mcr.microsoft.com/dotnet/sdk:6.0'
     entrypoint: 'bash'
     args:
       - '-c'
-      - 'cd /workspace/source/wodboxrepo && dotnet build -c Release'
+      - 'cd /workspace/wodboxrepo && dotnet build -c Release'
 
