--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,20 @@
 steps:
   - name: 'gcr.io/cloud-builders/git'
     args: ['clone', 'https://github.com/PhilipBessong/wodboxrepo', 'app']
+
   - name: 'gcr.io/cloud-builders/npm'
     args: ['install']
     dir: 'app'
+
   - name: 'gcr.io/cloud-builders/npm'
     args: ['run', 'build']
     dir: 'app'
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy', '--version', 'wodboxappv1']
-    dir: 'app'
 
- 
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+      - 'app'
+      - 'deploy'
+      - '--quiet'
+      - '--project=wodbox-407204'
+      - 'app.yaml'
+    dir: 'app'
