--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,14 +10,22 @@ steps:
     args: ['run', 'build']
     dir: 'app'
 
+  - name: 'gcr.io/cloud-builders/npm'
+    args: ['install', '-g', '@angular/cli']
+    dir: 'app'
+
+  - name: 'gcr.io/cloud-builders/npm'
+    args: ['run', 'build', '--prod']
+    dir: 'app'
+
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'app'
       - 'deploy'
       - '--quiet'
       - '--project=wodbox-407204'
-      - 'app.yaml'
-    dir: 'app'
-    
-      # Set environment variables if needed
-
+      - '--version=v1' # Replace with your app version
+      - '--platform=managed'
+      - '--region=us-central1 ' # Replace with your desired region
+      - '--no-promote'
+      - '--no-stop-previous-version'
