--- a/app.yaml
+++ b/app.yaml
@@ -1,14 +1,20 @@
 runtime: nodejs
 env: flex
 
+handlers:
+  - url: /
+    static_files: www/index.html
+    upload: www/index.html
+
+  - url: /(.*)
+    static_files: www/\1
+    upload: www/(.*)
+
 env_variables:
   BUCKET_NAME: gs://wodappbckt
-
 
 skip_files:
   - ^node_modules$
 
-handlers:
-  - url: /.*
-    script: auto
+
 
