--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
     args: ['install']
     dir: 'app'
 
-  - name: 'gcr.io/cloud-builders/npm'  # Corrected indentation here
+- name: 'gcr.io/cloud-builders/npm'
     args: ['run', 'ionic', 'build', '--prod']
     dir: 'app'
 
