--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
     dir: 'app'
 
 - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'ionic', 'build', '--prod']
+    args: ['run', 'build:ionic']
     dir: 'app'
 
   - name: 'gcr.io/cloud-builders/gcloud'
