--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,10 @@ steps:
     dir: 'app'  # Set the working directory to 'app'
 
   - name: 'gcr.io/cloud-builders/npm'
+    args: ['install', '-g', '@ionic/cli']
+    dir: 'app'  # Set the working directory to 'app'
+
+  - name: 'gcr.io/cloud-builders/npm'
     args: ['run', 'build:ionic']
     dir: 'app'  # Set the working directory to 'app'
 
