--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
       "watch": "ng build --watch --configuration development",
       "test": "ng test",
       "lint": "ng lint",
-      "build:ionic": "./node_modules/.bin/ionic build --prod"
+      "build:angular": "ng build --prod"
+
     },
     "private": true,
     "dependencies": {
