--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
     dir: 'app'  # Set the working directory to 'app'
 
   - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'build:ionic']
+    args: ['run', 'build:angular']
     dir: 'app'  # Set the working directory to 'app'
 
   - name: 'gcr.io/cloud-builders/gcloud'
